# source/backend/rest/batch_policy_proposal.py
@@ -1,8 +1,6 @@
 from flask import Blueprint, request
-
-from models.batch_policy_proposal import exists_bapol_proposal_without_bapol, get_current_open_proposal_data, \
-    ExecutionStrategyBaPolProp, BatchPolicyProposal
-from models import db
+from models.batch_policy_proposal import exists_bapol_proposal_without_bapol, get_current_open_proposal_data, BatchPolicyProposal
+from rest import utils
 
 batch_policy_proposal_api = Blueprint('batch_policy_proposal_api', __name__)
 
@@ -10,6 +8,7 @@ batch_policy_proposal_api = Blueprint('batch_policy_proposal_api', __name__)
 @batch_policy_proposal_api.route('/open', methods=['GET'])
 def check_get_open_proposal():
     process_id = int(request.args.get('process-id'))
+    utils.validate_backend_process_id(process_id)
     if not exists_bapol_proposal_without_bapol(process_id):
         return {
             'newProposalExists': False
